--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,4 +32,4 @@ jobs:
       - name: Test
         run: |
           eval $(docker-machine env default)
-          cd tests; pytest -s .
+          cd tests; pytest .
