--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,12 @@ jobs:
   build:
     name: Build
     runs-on: macos-10.15
+    strategy:
+         fail-fast: false
+         matrix:
+           python: [3.8, 3.9, 3.10]
+           platform: [macos-10.15]
+    runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
