--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,6 +30,9 @@ jobs:
           git checkout 8670a72380c57c606d6582b645421e31dad2eee2
           brew install --cask virtualbox
 
+          # Avoids throttling git api in `docker-machine create` cmd
+          curl -Lo /Users/runner/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v18.09.1-rc1/boot2docker.iso
+
           docker-machine create --driver virtualbox default
           docker-machine env default
       - name: Install dev
