--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
           brew install --cask virtualbox
 
           # Avoids throttling git api in `docker-machine create` cmd
-          curl -Lo /Users/runner/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v18.09.1-rc1/boot2docker.iso
+          curl --create-dirs -Lo /Users/runner/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v18.09.1-rc1/boot2docker.iso
 
           docker-machine create --driver virtualbox default
           docker-machine env default
