--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,8 +10,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.8", "3.9", "3.10"]
-        platform: ["macos-10.15"]
+        python: ["3.7", "3.8", "3.9"]
+        platform: ["macos-10.15", "ubuntu"]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout
