--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - "main"
-      - "kenny/ci"
+      - "kenny/ubuntu"
 jobs:
   build:
     name: Build
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python: ["3.7", "3.8", "3.9"]
-        platform: ["macos-10.15"]
+        platform: ["macos-10.15", "ubuntu-18.04"]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout
