--- a/requirements.txt
+++ b/requirements.txt
@@ -19,27 +19,27 @@ charset-normalizer==2.0.10
 click==7.1.2
     # via
     #   -r requirements.in
-    #   flytekit
+    #   flaightkit
 croniter==1.1.0
-    # via flytekit
+    # via flaightkit
 dataclasses-json==0.5.6
-    # via flytekit
+    # via flaightkit
 decorator==5.1.1
     # via retry
 deprecated==1.2.13
-    # via flytekit
+    # via flaightkit
 dirhash==0.2.1
-    # via flytekit
+    # via flaightkit
 docker-image-py==0.1.12
-    # via flytekit
+    # via flaightkit
 docstring-parser==0.13
-    # via flytekit
-flyteidl @ git+ssh://git@github.com/latchbio/flaightidl
-    # via flytekit
-flytekit @ git+ssh://git@github.com/latchbio/flaightkit
+    # via flaightkit
+flaightidl==0.1.1
+    # via flaightkit
+flaightkit @ git+ssh://git@github.com/latchbio/flaightkit
     # via -r requirements.in
 grpcio==1.43.0
-    # via flytekit
+    # via flaightkit
 idna==3.3
     # via requests
 importlib-metadata==4.10.0
@@ -49,9 +49,9 @@ jmespath==0.10.0
     #   boto3
     #   botocore
 joblib==1.1.0
-    # via flytekit
+    # via flaightkit
 keyring==23.5.0
-    # via flytekit
+    # via flaightkit
 marshmallow==3.14.1
     # via
     #   dataclasses-json
@@ -60,86 +60,88 @@ marshmallow==3.14.1
 marshmallow-enum==1.5.1
     # via dataclasses-json
 marshmallow-jsonschema==0.13.0
-    # via flytekit
+    # via flaightkit
 mypy-extensions==0.4.3
     # via typing-inspect
 natsort==8.0.2
-    # via flytekit
+    # via flaightkit
 numpy==1.22.0
     # via
     #   pandas
     #   pyarrow
 pandas==1.3.5
-    # via flytekit
+    # via flaightkit
 pathspec==0.9.0
     # via scantree
 protobuf==3.19.3
     # via
-    #   flyteidl
-    #   flytekit
+    #   flaightidl
+    #   flaightkit
 py==1.11.0
     # via retry
 pyarrow==3.0.0
-    # via flytekit
+    # via flaightkit
 pyjwt==2.3.0
     # via -r requirements.in
 python-dateutil==2.8.1
     # via
     #   botocore
     #   croniter
-    #   flytekit
+    #   flaightkit
     #   pandas
 python-json-logger==2.0.2
-    # via flytekit
+    # via flaightkit
 pytimeparse==1.1.8
-    # via flytekit
+    # via flaightkit
 pytz==2018.4
     # via
-    #   flytekit
+    #   flaightkit
     #   pandas
 pyyaml==5.4.1
-    # via flytekit
+    # via flaightkit
 regex==2021.11.10
     # via docker-image-py
 requests==2.27.1
     # via
     #   -r requirements.in
-    #   flytekit
+    #   flaightkit
     #   responses
 responses==0.17.0
-    # via flytekit
+    # via flaightkit
 retry==0.9.2
-    # via flytekit
+    # via flaightkit
 s3transfer==0.5.0
     # via boto3
 scantree==0.0.1
     # via dirhash
 six==1.16.0
     # via
-    #   flytekit
+    #   flaightkit
     #   grpcio
     #   python-dateutil
     #   responses
     #   scantree
 sortedcontainers==2.4.0
-    # via flytekit
+    # via flaightkit
 statsd==3.3.0
-    # via flytekit
+    # via flaightkit
 typing-extensions==4.0.1
-    # via typing-inspect
+    # via
+    #   -r requirements.in
+    #   typing-inspect
 typing-inspect==0.7.1
     # via dataclasses-json
 urllib3==1.26.8
     # via
     #   botocore
-    #   flytekit
+    #   flaightkit
     #   requests
     #   responses
 wheel==0.37.1
-    # via flytekit
+    # via flaightkit
 wrapt==1.13.3
     # via
     #   deprecated
-    #   flytekit
+    #   flaightkit
 zipp==3.7.0
     # via importlib-metadata
