--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,3 +43,14 @@ repos:
     rev: 5.9.2
     hooks:
       - id: isort
+  - repo: https://github.com/jazzband/pip-tools
+    rev: 6.5.1
+    hooks:
+      - id: pip-compile
+        name: requirements.txt
+        args: [requirements.in]
+        files: ^requirements\.(in|txt)$
+      - id: pip-compile
+        name: doc-requirements.txt
+        args: [doc-requirements.in]
+        files: ^doc-requirements\.(in|txt)$
