--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,1 @@
-recursive-include latch_cli/services/init Dockerfile *.R requirements.txt
+recursive-include latch_cli/services/init Dockerfile requirements.txt
