--- a/requirements.in
+++ b/requirements.in
@@ -1,10 +1,14 @@
-git+ssh://git@github.com/latchbio/flaightkit
-pyjwt
-click
-requests
-boto3
-awscli
-
-typing_extensions
-tqdm
 apscheduler
+awscli==1.25.22
+boto3==1.24.22
+click
+docker
+kubernetes
+lytekit
+lytekitplugins-pods
+paramiko
+pyjwt
+requests
+scp
+tqdm
+typing-extensions
