--- a/requirements.txt
+++ b/requirements.txt
@@ -4,54 +4,116 @@
 #
 #    pip-compile requirements.in
 #
-attrs==21.4.0
-    # via scantree
-boto3==1.20.46
+apscheduler==3.9.1
     # via -r requirements.in
-botocore==1.23.46
+arrow==1.2.3
+    # via jinja2-time
+attrs==21.4.0
+    # via jsonschema
+awscli==1.25.22
+    # via -r requirements.in
+bcrypt==4.0.0
+    # via paramiko
+binaryornot==0.4.4
+    # via cookiecutter
+boto3==1.24.22
+    # via -r requirements.in
+botocore==1.27.22
     # via
+    #   awscli
     #   boto3
     #   s3transfer
+cachetools==5.2.0
+    # via google-auth
 certifi==2021.10.8
-    # via requests
+    # via
+    #   kubernetes
+    #   requests
+cffi==1.15.1
+    # via
+    #   cryptography
+    #   pynacl
+chardet==5.0.0
+    # via binaryornot
 charset-normalizer==2.0.10
     # via requests
 click==7.1.2
     # via
     #   -r requirements.in
-    #   flaightkit
+    #   cookiecutter
+    #   lytekit
+cloudpickle==2.2.0
+    # via lytekit
+colorama==0.4.4
+    # via awscli
+cookiecutter==2.1.1
+    # via lytekit
 croniter==1.1.0
-    # via flaightkit
+    # via lytekit
+cryptography==38.0.1
+    # via paramiko
 dataclasses-json==0.5.6
-    # via flaightkit
+    # via lytekit
 decorator==5.1.1
     # via retry
 deprecated==1.2.13
-    # via flaightkit
-dirhash==0.2.1
-    # via flaightkit
+    # via lytekit
+diskcache==5.4.0
+    # via lytekit
+docker==5.0.3
+    # via
+    #   -r requirements.in
+    #   lytekit
 docker-image-py==0.1.12
-    # via flaightkit
+    # via lytekit
 docstring-parser==0.13
-    # via flaightkit
-flaightidl==0.1.1
-    # via flaightkit
-flaightkit @ git+ssh://git@github.com/latchbio/flaightkit
-    # via -r requirements.in
-grpcio==1.43.0
-    # via flaightkit
+    # via lytekit
+docutils==0.16
+    # via awscli
+google-auth==2.11.0
+    # via kubernetes
+googleapis-common-protos==1.56.4
+    # via
+    #   grpcio-status
+    #   lyteidl
+grpcio==1.48.1
+    # via
+    #   grpcio-status
+    #   lytekit
+grpcio-status==1.48.1
+    # via lytekit
 idna==3.3
     # via requests
 importlib-metadata==4.10.0
     # via keyring
+jinja2==3.1.2
+    # via
+    #   cookiecutter
+    #   jinja2-time
+jinja2-time==0.2.0
+    # via cookiecutter
 jmespath==0.10.0
     # via
     #   boto3
     #   botocore
-joblib==1.1.0
-    # via flaightkit
+jsonschema==4.15.0
+    # via lytekit
 keyring==23.5.0
-    # via flaightkit
+    # via lytekit
+kubernetes==24.2.0
+    # via
+    #   -r requirements.in
+    #   lytekitplugins-pods
+lyteidl==0.1.0
+    # via lytekit
+lytekit==0.4.0
+    # via
+    #   -r requirements.in
+    #   lytekitplugins-pods
+lytekitplugins-pods==0.3.1
+    # via -r requirements.in
+markupsafe==2.1.1
+    # via jinja2
 marshmallow==3.14.1
     # via
     #   dataclasses-json
@@ -60,90 +122,151 @@ marshmallow==3.14.1
 marshmallow-enum==1.5.1
     # via dataclasses-json
 marshmallow-jsonschema==0.13.0
-    # via flaightkit
+    # via lytekit
 mypy-extensions==0.4.3
     # via typing-inspect
 natsort==8.0.2
-    # via flaightkit
+    # via lytekit
 numpy==1.22.0
     # via
     #   pandas
     #   pyarrow
+oauthlib==3.2.0
+    # via requests-oauthlib
 pandas==1.3.5
-    # via flaightkit
-pathspec==0.9.0
-    # via scantree
+    # via lytekit
+paramiko==2.11.0
+    # via
+    #   -r requirements.in
+    #   scp
 protobuf==3.19.3
     # via
-    #   flaightidl
-    #   flaightkit
+    #   googleapis-common-protos
+    #   grpcio-status
+    #   lyteidl
+    #   lytekit
+    #   protoc-gen-swagger
+protoc-gen-swagger==0.1.0
+    # via lyteidl
 py==1.11.0
     # via retry
-pyarrow==3.0.0
-    # via flaightkit
+pyarrow==6.0.1
+    # via lytekit
+pyasn1==0.4.8
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.2.8
+    # via google-auth
+pycparser==2.21
+    # via cffi
 pyjwt==2.3.0
     # via -r requirements.in
+pynacl==1.5.0
+    # via paramiko
+pyrsistent==0.18.1
+    # via jsonschema
 python-dateutil==2.8.1
     # via
+    #   arrow
     #   botocore
     #   croniter
-    #   flaightkit
+    #   kubernetes
+    #   lytekit
     #   pandas
 python-json-logger==2.0.2
-    # via flaightkit
+    # via lytekit
+python-slugify==6.1.2
+    # via cookiecutter
 pytimeparse==1.1.8
-    # via flaightkit
+    # via lytekit
 pytz==2018.4
     # via
-    #   flaightkit
+    #   apscheduler
+    #   lytekit
     #   pandas
+pytz-deprecation-shim==0.1.0.post0
+    # via tzlocal
 pyyaml==5.4.1
-    # via flaightkit
+    # via
+    #   awscli
+    #   cookiecutter
+    #   kubernetes
+    #   lytekit
 regex==2021.11.10
     # via docker-image-py
 requests==2.27.1
     # via
     #   -r requirements.in
-    #   flaightkit
+    #   cookiecutter
+    #   docker
+    #   kubernetes
+    #   lytekit
+    #   requests-oauthlib
     #   responses
+requests-oauthlib==1.3.1
+    # via kubernetes
 responses==0.17.0
-    # via flaightkit
+    # via lytekit
 retry==0.9.2
-    # via flaightkit
-s3transfer==0.5.0
-    # via boto3
-scantree==0.0.1
-    # via dirhash
+    # via lytekit
+rsa==4.7.2
+    # via
+    #   awscli
+    #   google-auth
+s3transfer==0.6.0
+    # via
+    #   awscli
+    #   boto3
+scp==0.14.4
+    # via -r requirements.in
 six==1.16.0
     # via
-    #   flaightkit
+    #   apscheduler
+    #   google-auth
     #   grpcio
+    #   kubernetes
+    #   paramiko
     #   python-dateutil
     #   responses
-    #   scantree
 sortedcontainers==2.4.0
-    # via flaightkit
+    # via lytekit
 statsd==3.3.0
-    # via flaightkit
+    # via lytekit
+text-unidecode==1.3
+    # via python-slugify
 tqdm==4.63.0
     # via -r requirements.in
 typing-extensions==4.0.1
     # via
     #   -r requirements.in
+    #   lytekit
     #   typing-inspect
 typing-inspect==0.7.1
     # via dataclasses-json
+tzdata==2022.2
+    # via pytz-deprecation-shim
+tzlocal==4.2
+    # via apscheduler
 urllib3==1.26.8
     # via
     #   botocore
-    #   flaightkit
+    #   kubernetes
+    #   lytekit
     #   requests
     #   responses
+websocket-client==1.4.1
+    # via
+    #   docker
+    #   kubernetes
 wheel==0.37.1
-    # via flaightkit
+    # via lytekit
 wrapt==1.13.3
     # via
     #   deprecated
-    #   flaightkit
+    #   lytekit
 zipp==3.7.0
     # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
