--- a/requirements.txt
+++ b/requirements.txt
@@ -133,6 +133,8 @@ numpy==1.22.0
     #   pyarrow
 oauthlib==3.2.0
     # via requests-oauthlib
+packaging==21.3
+    # via -r requirements.in
 pandas==1.3.5
     # via lytekit
 paramiko==2.11.0
@@ -164,6 +166,8 @@ pyjwt==2.3.0
     # via -r requirements.in
 pynacl==1.5.0
     # via paramiko
+pyparsing==3.0.9
+    # via packaging
 pyrsistent==0.18.1
     # via jsonschema
 python-dateutil==2.8.1
