--- a/latch_cli/services/init/assemble_and_sort/Dockerfile
+++ b/latch_cli/services/init/assemble_and_sort/Dockerfile
@@ -1,4 +1,4 @@
-FROM 812206152185.dkr.ecr.us-west-2.amazonaws.com/latch-base:6839-main
+FROM 812206152185.dkr.ecr.us-west-2.amazonaws.com/latch-base:dd8f-main
 
 RUN apt-get install -y curl unzip
 
