--- a/requirements.in
+++ b/requirements.in
@@ -9,10 +9,11 @@ paramiko>=2.11.0
 scp>=0.14.0
 boto3>=1.24.22
 tqdm>=4.63.0
-lytekit==0.13.3
+lytekit==0.13.5
 lytekitplugins-pods==0.4.0
 typing-extensions==4.3.0
 apscheduler==3.9.1
 uvloop==0.17.0
 websockets==10.3
-prompt-toolkit==3.0.29
+prompt-toolkit==3.0.33
+asyncssh==2.12.0
