--- a/latch_cli/services/init/template/Dockerfile
+++ b/latch_cli/services/init/template/Dockerfile
@@ -1,5 +1,5 @@
 # Latch preamble (do not change)
-FROM 812206152185.dkr.ecr.us-west-2.amazonaws.com/latch-base:dd8f-main
+FROM 812206152185.dkr.ecr.us-west-2.amazonaws.com/latch-base:ace9-main
 
 RUN apt-get update -y && \
     apt-get install -y curl unzip
