--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ target-version = ["py39"]
 profile = "black"
 
 [tool.ruff]
+target-version = "py39"
 pydocstyle = { convention = "google" }
-extend-select = ["W", "D", "U", "N", "C", "B", "A", "T", "Q", "M"]
+extend-select = ["W", "D", "U", "N", "C", "B", "A", "T", "Q", "RUF100"]
 extend-ignore = [
   "A002",
   "A003",
@@ -29,4 +30,7 @@ extend-ignore = [
   "D415",
 
   "D100",
+
+  "UP006",
+  "UP035",
 ]
