--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ latch.egg-info
 /.mypy_cache
 /.ruff_cache
 .env/
+.venv
 
 __pycache__
 
@@ -18,4 +19,4 @@ docs/build
 scratch.py
 /scratch
 test_*
-_chunks
+.latch_report.tar.gz
