--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       - id: check-merge-conflict
       - id: check-symlinks
       - id: check-toml
-      # - id: check-vcs-permalinks # todo(maximsmol): reenable, violated in IDL copy-pasted comments
+      - id: check-vcs-permalinks
       # - id: check-xml
       - id: check-yaml
       # - id: debug-statements
