--- a/latch_cli/services/init/common/.dockerignore
+++ b/latch_cli/services/init/common/.dockerignore
@@ -1,9 +1,10 @@
-# commonly ignored files
 README.md
 CHANGELOG.md
 docker-compose.yml
 Dockerfile
-.latch/.logs
+.latch
 .git
 **/__pycache__
 .latch_report.tar.gz
+
+!.latch/snakemake_jit_entrypoint.py
