lets trust these again

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.8", "3.9"]
+        python: ["3.8", "3.9", "3.10", "3.11"]
         platform: ["macos-10.15"]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -17,21 +17,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Download Docker
-        run: |
-          brew install docker docker-machine
-
-          # Latest virtualbox has breaking change for mac
-          brew uninstall virtualbox
-          cd $(brew --repo homebrew/cask)
-          git checkout 8670a72380c57c606d6582b645421e31dad2eee2
-          brew install --cask virtualbox
-
-          # Avoids throttling git api in `docker-machine create` cmd
-          curl --create-dirs -Lo /Users/runner/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v18.09.1-rc1/boot2docker.iso
-
-          docker-machine create --driver virtualbox default
-          docker-machine env default
       - name: Install dev
         run: |
           python3 -m pip install -r dev-requirements.txt
@@ -49,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.8", "3.9"]
+        python: ["3.8", "3.9", "3.10", "3.11"]
         platform: ["ubuntu-18.04"]
     runs-on: ${{ matrix.platform }}
     steps:
