better pytest call in ci
Signed-off-by: Ayush Kamat <ayush@latch.bio>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,4 +26,4 @@ jobs:
         env:
           TEST_TOKEN: ${{ secrets.TEST_TOKEN }}
         run: |
-          cd tests; python3 -m pytest -s .
+          pytest -s
