--- a/latch_cli/services/init/example_snakemake/Snakefile
+++ b/latch_cli/services/init/example_snakemake/Snakefile
@@ -1,4 +1,4 @@
-from latch.types.metadata import SnakemakeMetadata, SnakemakeParameter
+from latch.types.metadata import SnakemakeMetadata, SnakemakeFileParameter
 from latch.types.directory import LatchDir
 from latch.types.metadata import LatchAuthor, LatchMetadata, LatchParameter
 
