--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ classifiers = [
 
 [project.optional-dependencies]
 pandas = ["pandas>=2.0.0"]
+snakemake = ["snakemake>=7.18.0,<7.30.2", "pulp>=2.0,<2.8"]
 
 [project.scripts]
 latch = "latch_cli.main:main"
