--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ include = ["src/**/*.py", "src/latch_cli/services/init/*"]
 
 [project]
 name = "latch"
-version = "2.54.0.a3"
+version = "2.54.0.a8"
 description = "The Latch SDK"
 authors = [{ name = "Kenny Workman", email = "kenny@latch.bio" }]
 maintainers = [
@@ -34,13 +34,13 @@ dependencies = [
   "scp>=0.14.0",
   "boto3>=1.26.0",
   "tqdm>=4.63.0",
-  "lytekit==0.15.13",
+  "lytekit==0.15.14",
   "lytekitplugins-pods==0.6.2",
   "typing-extensions>=4.12.0",
   "apscheduler>=3.10.0",
-  "gql==3.4.0",
+  "gql>=3.5.0,<4.0.0",
   "graphql-core==3.2.3",
-  "requests-toolbelt==0.10.1",
+  "requests-toolbelt>=1.0.0,<2.0.0",
   "python-dateutil>=2.8",
   "GitPython==3.1.40",
 
@@ -98,11 +98,10 @@ docs = [
 ]
 
 [tool.ruff]
+line-length = 100
 target-version = "py39"
 
 [tool.ruff.lint]
-preview = true
-
 pydocstyle = { convention = "google" }
 extend-select = [
   "F",
@@ -171,6 +170,9 @@ ignore = [
 
   "ANN101",
   "ANN102",
+  "ANN201",
+
+  "D202",
 
   "E402",
   "E501",
