--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,15 +43,14 @@ dependencies = [
   "requests-toolbelt==0.10.1",
   "python-dateutil>=2.8",
   "GitPython==3.1.40",
-
   # for old latch develop, to be removed
   "aioconsole==0.6.1",
   "asyncssh==2.13.2",
   "websockets==11.0.3",
   "watchfiles==0.19.0",
-
   # marshmallow_jsonschema depends on setuptools but doesn't specify it so we have to do it for them yay :D
   "setuptools>=75.3.0",
+  "pyxattr>=0.8.1",
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
@@ -87,7 +86,10 @@ Changelog = "https://github.com/latchbio/latch/blob/main/CHANGELOG.md"
 
 
 [dependency-groups]
-dev = ["ruff>=0.7.0", "pytest>=8.3.3"]
+dev = [
+    "ruff>=0.7.0",
+    "pytest>=8.3.3",
+]
 docs = [
   "sphinx",
   "sphinx-book-theme",
