--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ include = ["src/**/*.py", "src/latch_cli/services/init/*"]
 
 [project]
 name = "latch"
-version = "2.54.3"
+version = "2.54.4"
 description = "The Latch SDK"
 authors = [{ name = "Kenny Workman", email = "kenny@latch.bio" }]
 maintainers = [
@@ -51,6 +51,7 @@ dependencies = [
   # marshmallow_jsonschema depends on setuptools but doesn't specify it so we have to do it for them yay :D
   "setuptools>=75.3.0",
   "pyxattr>=0.8.1",
+  "orjson>=3.10.12",
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
