refactor dockerfile building
Signed-off-by: Ayush Kamat <ayush@latch.bio>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -170,6 +170,9 @@ ignore = [
 
   "ANN101",
   "ANN102",
+  "ANN201",
+  "ANN202",
+  "ANN204",
 
   "E402",
   "E501",
@@ -177,6 +180,8 @@ ignore = [
 
   "C408",
   "C901",
+
+  "FA100",
 
   "T201",
   "T203",
@@ -229,6 +234,7 @@ ignore = [
 
   "PD901",
 
+  "UP006",
   "UP040",
 
   "SIM112",
