--- a/pyproject.toml
+++ b/pyproject.toml
@@ -186,7 +186,6 @@ ignore = [
   "T201",
   "T203",
 
-  "D415",
 
   "SIM108",
 
@@ -203,6 +202,8 @@ ignore = [
   "D105",
   "D106",
   "D107",
+  "D202",
+  "D415",
 
   "TRY003",
   "TRY300",
@@ -211,6 +212,8 @@ ignore = [
   "FLY002",
 
   "PERF203",
+
+  "PLC0415",
 
   "PLW2901",
   "PLW0603",
