--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,11 @@ classifiers = [
 
 [project.optional-dependencies]
 pandas = ["pandas>=2.0.0"]
-snakemake = ["snakemake>=7.18.0,<7.30.2", "pulp>=2.0,<2.8"]
+snakemake = [
+  "snakemake",
+  "snakemake-storage-plugin-latch",
+  "snakemake-executor-plugin-latch",
+]
 
 [project.scripts]
 latch = "latch_cli.main:main"
