--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
   "setuptools>=75.3.0",
   "pyxattr>=0.8.1",
   "orjson>=3.10.12",
+  "latch-persistence>=0.1.1",
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
