--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
-include = ["src/**/*.py", "src/latch_cli/services/init/*"]
+include = [
+  "src/**/*.py",
+  "src/**/py.typed",
+  "src/latch_cli/services/init/*",
+]
 
 [tool.hatch.build.targets.wheel.force-include]
 "src/latch_cli" = "latch_cli"
