--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
   "pyxattr>=0.8.1",
   "orjson>=3.10.12",
   "latch-persistence>=0.1.5",
+  "dill>=0.4.0",
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
