--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ include = ["src/**/*.py", "src/latch_cli/services/init/*"]
 
 [project]
 name = "latch"
-version = "2.62.1"
+version = "2.62.1.a1"
 description = "The Latch SDK"
 authors = [{ name = "Kenny Workman", email = "kenny@latch.bio" }]
 maintainers = [
@@ -78,7 +78,7 @@ pandas = ["pandas>=2.0.0"]
 snakemake = [
   "snakemake",
   "snakemake-storage-plugin-latch==0.1.10",
-  "snakemake-executor-plugin-latch==0.1.8",
+  "snakemake-executor-plugin-latch==0.1.9",
 ]
 
 [project.scripts]
