--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
-include = [
-  "src/**/*.py",
-  "src/**/py.typed",
-  "src/latch_cli/services/init/*",
-]
+include = ["src/**/*.py", "src/**/py.typed", "src/latch_cli/services/init/*"]
 
 [tool.hatch.build.targets.wheel.force-include]
 "src/latch_cli" = "latch_cli"
@@ -16,7 +12,7 @@ include = [
 
 [project]
 name = "latch"
-version = "2.65.2"
+version = "2.65.3"
 description = "The Latch SDK"
 authors = [{ name = "Kenny Workman", email = "kenny@latch.bio" }]
 maintainers = [{ name = "Ayush Kamat", email = "ayush@latch.bio" }]
